# watson_lite

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  GAP.md  README.md  cli.py  fragment.txt  pipeline.py  pyproject.toml  requirements.txt  run_benchmarks.py
.github/workflows/: ci.yml  pypi-publish.yml
benchmarks/: .answer_cache.sqlite3-shm  .answer_cache.sqlite3-wal  natural_questions_dev.json  smoke.json
core/: cache.py  extractor.py  nlp.py
docs/: SPEC.md
examples/: questions.txt
graph/: wikidata.py
ranking/: ranker.py
retrieval/: bm25_retriever.py  vector_retriever.py
src/watson_lite/: __init__.py  __main__.py  pipeline.py
src/watson_lite/core/: cache.py  config.py  extractor.py  fallbacks.py  models.py  network.py  nlp.py
src/watson_lite/evaluation/: __init__.py  benchmark_runner.py  kpis.py
src/watson_lite/evaluation/benchmarks/: _download_utils.py  natural_questions.py  squad.py  triviaqa.py
src/watson_lite/graph/: wikidata.py
src/watson_lite/ranking/: ranker.py
src/watson_lite/retrieval/: bm25_retriever.py  dataset_plugins.py  dataset_query_engine.py  offline_dataset_retriever.py  query_formulation.py  vector_retriever.py  wikidata_sparql_fetcher.py
src/watson_lite/scoring/: answer_merging.py  consistency.py  double_check.py  entailment.py  term_match.py  type_coercion.py
tests/: conftest.py  test_ablation.py  test_adversarial.py  test_answer_merging.py  test_benchmark_dataset.py  test_benchmark_download_utils.py  test_benchmark_natural_questions.py  test_benchmark_runner.py  test_benchmark_squad.py  test_benchmark_triviaqa.py  test_bm25_retriever.py  test_cache.py  test_confidence_scorer.py  test_consistency.py  test_dataset_plugins.py  test_dataset_query_engine.py  test_double_check.py  test_e2e.py  test_entailment.py  test_kpis.py  test_main.py  test_models.py  test_nlp.py  test_nlp_utils.py  test_pipeline.py  test_query_formulation.py  test_ranker.py  test_rrf.py  test_type_coercion.py  test_vector_retriever.py  test_wikidata.py  test_wikidata_sparql_fetcher.py
