[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "watson-lite"
version = "0.1.3"
description = "Extractive QA pipeline — no LLM, no training. BM25 + FAISS + Wikidata + cross-encoder re-ranking + roberta-base-squad2."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Dario Clavijo", email = "clavijodario@gmail.com"}
]
dependencies = [
    "bm25s>=0.1.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
nlp = [
    "spacy>=3.7.0",
]
vector = [
    "faiss-cpu>=1.7.4",
    "numpy>=1.26.0",
    "sentence-transformers>=2.7.0",
]
rerank = [
    "sentence-transformers>=2.7.0",
]
reader = [
    "torch>=2.0.0",
    "transformers>=4.40.0",
]
graph = [
    "SPARQLWrapper>=2.0.0",
]
full = ["watson-lite[nlp,vector,rerank,reader,graph]"]
dev = [
    "ruff",
    "hatch",
]
test = [
    "pytest",
    "pytest-cov",
]
lint = [
    "prospector[with_ruff,with_mypy]",
]
all = ["watson-lite[dev,test,lint,full]"]

[project.urls]
Homepage = "https://github.com/daedalus/watson-lite"
Repository = "https://github.com/daedalus/watson-lite"
Issues = "https://github.com/daedalus/watson-lite/issues"

[project.scripts]
watson-lite = "watson_lite.__main__:main"
fetch-benchmark-squad = "watson_lite.evaluation.benchmarks.squad:main"
fetch-benchmark-triviaqa = "watson_lite.evaluation.benchmarks.triviaqa:main"
fetch-benchmark-natural-questions = "watson_lite.evaluation.benchmarks.natural_questions:main"

[tool.hatch.build.targets.wheel]
packages = ["src/watson_lite"]

[tool.hatch.build.targets.sdist]
include = ["src/watson_lite"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "ANN", "TCH", "N", "C4", "ARG"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.prospector]
output-format = "text"
strictness = "medium"
test-warnings = false

[tool.pylint.MESSAGES_CONTROL]
disable = ["too-many-locals", "no-value-for-parameter"]

[tool.prospector.tools]
ruff = true
mypy = true
pylint = true
pyflakes = false
pycodestyle = false
mccabe = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short --cov=src --cov-fail-under=80"

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
exclude = ["tests/*", "*/__init__.py"]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
